🦄 rename: 重命名为 nonebot-plugin-vocu

--- a/.github/workflows/test-load.yml
+++ b/.github/workflows/test-load.yml
@@ -38,5 +38,5 @@ jobs:
         nonebot.init();
         nonebot.get_driver().register_adapter(Adapter);
         nonebot.load_from_toml('pyproject.toml');
-        assert nonebot.get_plugin_by_module_name('nonebot_plugin_aivoice') is not None;
+        assert nonebot.get_plugin_by_module_name('nonebot_plugin_vocu') is not None;
         "
