🐳 chore: 更新发布工作流以匹配标签格式，并修改项目名称和描述

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "nonebot-plugin-template"
+name = "nonebot-plugin-vocu"
 version = "0.1.0"
-description = "插件描述"
+description = "nonebot2 onebot v1 Vocu 语音插件"
 readme = "README.md"
 authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
 requires-python = ">=3.10,<3.13"
