--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -11,22 +11,19 @@ jobs:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: "3.12"
-
-    - name: Install uv
-      run: >-
-        pip install uv
+      - name: Checkout repository
+      uses: actions/checkout@v2
         
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
+        with:
+          python-version: "3.12"
         
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        uv build 
+      - name: Build a binary wheel and a source tarball
+        run: >-
+          uv build 
 
-    - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Publish distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
