🔧 chore: update GitHub Actions workflow for pytest
- Restrict workflow to trigger only on pushes to the master branch.
- Ignore changes to README.md to reduce unnecessary workflow runs.
- Ensure pull requests are also accounted for in the workflow configuration.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,8 +3,11 @@ name: Pytest
 on:
   push:
     branches:
-      - '*'
-
+      - 'master'
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
