🔧 chore: update testing configuration and workflows (#7)
* 🔧 chore: update testing configuration and workflows

- Updated pytest-asyncio version in pyproject.toml.
- Enhanced pytest configuration with additional options for better output and strict markers.
- Modified GitHub Actions workflows to streamline build and test commands.

* 🔧 chore: update GitHub Actions workflow for pytest

- Restrict workflow to trigger only on pushes to the master branch.
- Ignore changes to README.md to reduce unnecessary workflow runs.
- Ensure pull requests are also accounted for in the workflow configuration.

* 🔧 chore: adjust pytest-asyncio version in testing configuration

- Downgraded pytest-asyncio version in pyproject.toml from 0.26.6 to 0.26.0 to ensure compatibility with existing tests.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,8 +3,11 @@ name: Pytest
 on:
   push:
     branches:
-      - '*'
-
+      - 'master'
+    paths-ignore:
+      - 'README.md'
+  pull_request:
+    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,4 +35,4 @@ jobs:
 
     - name: Run all tests
       run: |
-        python -m pytest -v -s
+        uv run pytest
