--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dev = ["nonebot2[fastapi]>=2.4.2,<3.0.0", "ruff>=0.9.10,<1.0.0"]
 test = [
   "nonebug>=0.3.7,<1.0.0",
   "pytest-xdist>=3.6.1,<4.0.0",
-  "pytest-asyncio>=0.23.6,<1.0.0",
+  "pytest-asyncio>=0.26.0,<1.0.0",
 ]
 
 
@@ -34,9 +34,19 @@ plugins = ["nonebot_plugin_vocu"]
 exclude = [".docs"]
 
 [tool.pytest.ini_options]
-# testpaths = ["tests"]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+pythonpath = [".", "nonebot_plugin_template", "tests"]
+addopts = [
+  "-v",               # 详细输出
+  "-s",               # 显示打印信息
+  "--tb=short",       # 简短的错误回溯
+  "-ra",              # 显示所有测试结果摘要
+  "--strict-markers", # 严格标记模式
+  # "--doctest-modules", # 运行文档测试
+  "--import-mode=prepend", # 导入模式
+]
+
 
 [tool.ruff]
 line-length = 120
