🔧 build: use uv build backend and use src layout

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,11 +28,10 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
+        version: 'latest'
     
     - name: Install Dependencies for test group
-      run: |
-        uv sync --group test
+      run: uv sync --group test
 
     - name: Run all tests
-      run: |
-        uv run pytest
+      run: uv run pytest
